2006-07-14  Christian Kellner  <gicmo@gnome.org>

	* configure.in:
	* modules/Makefile.am:
	* modules/http-authn.c:
	* modules/http-authn.h:
	* modules/http-cache.c:
	* modules/http-cache.h:
	* modules/http-method.c:
	* modules/http-method.h:
	Kill the old, totally unmaintained http method.

2006-07-14  Christian Kellner  <gicmo@gnome.org>

	* libgnomevfs/gnome-vfs-utils.c: Replace gnome_vfs_str_has_prefix
	with glib's g_str_has_prefix. Fixes bug #342239
	Patch from Paolo Borelli <pborelli@katamail.com>  

2006-07-13  Christian Kellner  <gicmo@gnome.org>

	* configure.in:
	* libgnomevfs/.cvsignore:
	* libgnomevfs/Makefile.am:
	* libgnomevfs/gnome-vfs-version.h.in:
	Add gnome-vfs-version.h for compile time version checking.
	Partly fixes bug #323614

2006-07-13  Christian Neumair  <chris@gnome-de.org>

	* libgnomevfs/gnome-vfs-pty.c: (_gnome_vfs_pty_fork_on_pty_name):
	Initialize ready_a and ready_b to satisfy compiler. Fixes #342115.

2006-07-13  Christian Neumair  <chris@gnome-de.org>

	* libgnomevfs/gnome-vfs-volume-ops.c: (spawn_mount),
	Include <system.h>, cast &pid to pid_t * before passing it
	to gnome_vfs_pty_open.
	* libgnomevfs/xdgmimemagic.c: (_xdg_mime_magic_parse_magic_line):
	Only declare 'i' #if LITTLE_ENDIAN.
	Fixes #340277. Thanks to James Andrewartha.

2006-07-13  Christian Neumair  <chris@gnome-de.org>

	* libgnomevfs/gnome-vfs-directory.c:
	* libgnomevfs/gnome-vfs-ops.c:
	Initialize passed-in handle to NULL after g_return_if_fail check in
	public functions. Add g_return_if_fail statements and NULL initializer
	to gnome_vfs_monitor_add(). Thanks to George Karabin
	<gkarabin@pobox.com>. Fixes #45783.

2006-07-13  Christian Kellner  <gicmo@gnome.org>

	* libgnomevfs/gnome-vfs-drive.c:
	* libgnomevfs/gnome-vfs-drive.h:
	gnome_vfs_drive_needs_eject (): New function indicating wether
	a drive needs to be ejected after it has been unmounted.
	Patch from Martin Pitt <martin.pitt@canonical.com>
	Fixes bug #336533
