@@ -86,6 +86,7 @@ G_BEGIN_DECLS
  * @GNOME_VFS_ERROR_NAMESERVER: Nameserver error.
  * @GNOME_VFS_ERROR_LOCKED: The resource is locked.
  * @GNOME_VFS_ERROR_DEPRECATED_FUNCTION: Function call deprecated.
+ * @GNOME_VFS_ERROR_INVALID_FILENAME: The specified filename is invalid.
  *
  * A #GnomeVFSResult informs library clients about the result of a file operation.
  * Unless it is #GNOME_VFS_OK, it denotes that a problem occurred and the operation
@@ -144,6 +145,7 @@ typedef enum {
 	GNOME_VFS_ERROR_NAMESERVER,
 	GNOME_VFS_ERROR_LOCKED,
 	GNOME_VFS_ERROR_DEPRECATED_FUNCTION,
+	GNOME_VFS_ERROR_INVALID_FILENAME,
 	GNOME_VFS_NUM_ERRORS
 } GnomeVFSResult;
 
